# gameplay.computer-old-python

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  IDEAS.md  LICENSE  README.md  alembic.ini  fly.toml  justfile  pyproject.toml  tox.ini
.github/workflows/: test.yml
crates/gameplay/: Cargo.toml
crates/gameplay/src/: lib.rs
migrations/: env.py
migrations/versions/: 1df895525d34_drop_game_table.py  1e833e1bf6ee_match_winner.py  408866a4b81c_widgets_table.py  4e4985d80acf_matches.py  516ddfaaa55f_timezones.py  5abff25e0f87_fresh_start.py  7fb740bc8fa0_normalize.py  ecc49f9f55bc_agents.py  f1aaaa8b26db_agents.py  f4ed0977b4e9_players_index_from_0.py
src/gameplay/: __init__.py
src/gameplay/connect4/: __init__.py
src/gameplay/game/domain/: events.py  model.py
src/gameplay/game/service/: services.py  session.py
src/gameplay/games/: __init__.py
src/gameplay/match/: __init__.py  commands.py  events.py  repository.py  service.py  session.py
src/gameplay/web/: __init__.py  app.py  schemas.py  service.py  tables.py
src/gameplay/web/common/: __init__.py  repo.py  schemas.py  tables.py
src/gameplay/web/matches/: repo.py  schemas.py  tables.py
src/gameplay/web/templates/: _layout.html  _layout.html.j2  agents.html  connect4.html.j2  connect4_match.html  connect4_match.html.j2  games.html  home.html  matches.html  root.html  root.html.j2  test.html
src/gameplay/web/users/: repo.py  schemas.py
src/gameplay_computer/: __init__.py  _gameplay.pyi  gameplay.py
src/gameplay_computer/agents/: __init__.py  repo.py  schemas.py  service.py  tables.py
src/gameplay_computer/common/: __init__.py  repo.py  schemas.py  service.py  tables.py
src/gameplay_computer/games/: __init__.py  connect4.py
src/gameplay_computer/matches/: __init__.py  repo.py  schemas.py  service.py  tables.py
src/gameplay_computer/users/: __init__.py  repo.py  schemas.py
src/gameplay_computer/web/: app.py  auth.py  listener.py  schemas.py  service.py  tasks.py  tracing.py  worker.py
src/gameplay_computer/web/templates/: _app.html  _layout.html  _web.html  app.html  connect4_match.html  home.html  index.html  users.html
tests/: __init__.py  conftest.py  test_testing.py  test_web.py
tests/web/: conftest.py  test_web.py
