[project]
name = "gameplay"
authors = [
    { name = "Steve Olsen", email = "steve@steve.computer" },
]
description = "play games"
requires-python = "~=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
test = ["pytest"]
lint = ["black[d]", "mypy", "ruff", "sqlalchemy-stubs"]
web = [
    "fastapi[all]",
    "sse-starlette",
    "databases[asyncpg]",
    "asyncpg_listen",
    "sqlalchemy",
    "sentry-sdk[fastapi]",
    "jinja2",
    "jinja2-fragments"
]
migrate = ["alembic", "psycopg2"]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
module-name = "gameplay._gameplay"
features = ["pyo3/extension-module"]
manifest-path = "crates/gameplay/Cargo.toml"
python-source = "src"
include = [
    "src/gameplay/web/static",
    "src/gameplay/web/templates"
]

[tool.mypy]
plugins = "sqlmypy"
exclude = "migrations"
strict = true